# acro-planner

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  implementation-plan.md  test_connection.py
acro-planner-mobile/src/contexts/: AuthContext.tsx
acro-planner-mobile/src/navigation/: AppNavigator.tsx  types.ts
acro-planner-mobile/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx
acro-planner-mobile/src/screens/main/: HomeScreen.tsx
acro-planner-mobile/src/services/: api.ts
admin/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js
admin-static/: index.html
admin/src/: app.d.ts  app.html
admin/src/routes/: +page.svelte
admin/static/: index.html
clients/: README.md
clients/acro-planner-mobile/: README.md  app.json  package-lock.json  package.json
clients/acro-planner-mobile/src/config/: env.ts
clients/acro-planner-mobile/src/contexts/: AuthContext.tsx
clients/acro-planner-mobile/src/screens/auth/: LoginScreen.tsx  RegisterScreen.tsx
clients/acro-planner-mobile/src/screens/main/: HomeScreen.tsx
clients/acro-planner-mobile/src/services/: api.ts
clients/acro-planner-mobile/src/utils/: storage.ts
clients/acro_planner_app/: .env.example  Makefile  README.md  pubspec.yaml
clients/acro_planner_app/android/app/: build.gradle.kts
clients/acro_planner_app/android/app/src/main/: AndroidManifest.xml
clients/acro_planner_app/integration_test/: README.md  app_test.dart  run_tests.sh
clients/acro_planner_app/ios/Runner/: Info.plist
clients/acro_planner_app/ios/Runner.xcodeproj/: project.pbxproj
clients/acro_planner_app/linux/: CMakeLists.txt
clients/acro_planner_app/linux/runner/: my_application.cc
clients/acro_planner_app/macos/Runner.xcodeproj/: project.pbxproj
clients/acro_planner_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
clients/acro_planner_app/macos/Runner/Configs/: AppInfo.xcconfig
clients/acro_planner_app/test/: widget_test.dart  widget_test.mocks.dart
clients/acro_planner_app/test/widget/: README.md  signup_page_test.dart  signup_page_test.mocks.dart
clients/acro_planner_app/web/: index.html  manifest.json
clients/acro_planner_app/windows/: CMakeLists.txt
clients/acro_planner_app/windows/runner/: Runner.rc  main.cpp
scripts/: deploy-frontend.sh  deploy.sh  update_frontend_url.py
server/: .dockerignore  ADMIN_LOGIN_FLOW.md  Dockerfile  GMAIL_SETUP.md  MVP_GAP_ANALYSIS.md  Makefile  README.md  auth_manager.py  cloudbuild.yaml  create_schema.py  database.py  main.py  migrate_db.py  models.py  oauth.py  pyproject.toml  pyproject.toml.old  pytest.ini
server/.github/workflows/: ci.yml
server/api/: __init__.py  attendees.py  auth.py  convention.py  events.py  hosts.py  schemas.py  users.py
server/api/routes/: admin.py  app.py  attendees.py  auth_routes.py  conventions.py  core.py  equipment.py  event_slots.py  prerequisites.py  users.py  workshops.py
server/migrations/: create_password_reset_table.py
server/scripts/: README.md  init_db.py  init_db.sh
server/scripts/sql/: 001_create_tables.sql  002_create_indexes.sql  003_insert_seed_data.sql  004_add_hosts_user_id_and_selections_table.sql  005_add_selections_indexes.sql  006_add_conventions_and_fix_attendees.sql
server/server/: pyproject.toml
server/static/: access_denied.html  admin.html  admin_enhanced.html  login.html
server/tests/: README.md  __init__.py  conftest.py  test_attendee_manager.py  test_attendees_api.py  test_bulk_slot_creation.py  test_convention_manager.py  test_convention_registration.py  test_conventions_api.py  test_enhanced_queries.py  test_equipment_api.py  test_events_manager.py  test_example.py  test_prerequisites_api.py  test_security.py  test_user_roles.py  test_workshop_slot_assignment.py  test_workshops_api.py
server/utils/: __init__.py  auth.py  gmail_service.py  password_reset.py  roles.py  system_settings.py  validation.py
terraform/: .gitignore  README.md  cloudrun.tf  cloudsql.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+1 files in other folders)
