[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "k3",email = "buoren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ulid-py (>=1.1.0,<2.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "authlib (>=1.3.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "httpx (>=0.27.2,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
