[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "k3",email = "buoren@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ulid-py (>=1.1.0,<2.0.0)",
    "email-validator (>=2.1.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "authlib (>=1.3.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "httpx (>=0.27.2,<1.0.0)",
    "fastapi-login (>=1.10.0,<2.0.0)",
    "google-api-python-client (>=2.0.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-auth-oauthlib (>=1.0.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-asyncio (>=0.23.0,<0.24.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "httpx (>=0.27.2,<1.0.0)",
    "mypy (>=1.8.0,<2.0.0)",
    "ruff (>=0.5.0,<0.6.0)",
    "types-requests (>=2.32.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (for FastAPI dependencies)
    "ARG002", # unused method argument
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # Allow assert in tests, unused args in fixtures
"conftest.py" = ["ARG", "F401"]  # Allow unused imports in fixtures

[tool.ruff.isort]
known-first-party = ["api", "models", "utils", "database", "oauth"]

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "itsdangerous.*",
    "ulid.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
